[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/EditorsElements/VariblesEditor/EditNumberVarible.gd" type="Script" id=1]

[node name="Number" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Num" type="SpinBox" parent="."]
margin_right = 62.0
margin_bottom = 40.0
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true

[node name="Float" type="CheckBox" parent="."]
margin_left = 66.0
margin_right = 119.0
margin_bottom = 40.0
text = "Float"

[node name="Pow" type="SpinBox" parent="."]
margin_left = 123.0
margin_right = 273.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
min_value = 1.0
max_value = 5.0
value = 1.0
suffix = "numbers after dot"

[connection signal="value_changed" from="Num" to="." method="_on_Num_value_changed"]
[connection signal="toggled" from="Float" to="." method="_on_Float_toggled"]
[connection signal="value_changed" from="Pow" to="." method="_on_Pow_value_changed"]
